# LegendGeom

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  __init__.py  codecov.yml  pyproject.toml  setup.cfg
.github/workflows/: main.yml
LegendBaseline/L1000Baseline/: L1000CompleteSetup.py  LInfrastructure.py  LMaterials.py  testscript.py  testscript2.py
LegendBaseline/coaxialTemplate/: V09372A.json  __init__.py  icpc.py  testicpc.py
LegendGeom/LegendBaseline/L1000Baseline/: LInfrastructure.py  LMaterials.py  testscript.py
docs/: Makefile
docs/source/: conf.py  index.rst
scripts/: V09372A.json  testicpc.py  testscript.py  testscript2.py
src/pylegendgeom/: __init__.py
src/pylegendgeom/LegendBaseline/: __init__.py
src/pylegendgeom/LegendBaseline/L1000Baseline/: L1000CompleteSetup.py  LInfrastructure.py  LMaterials.py  __init__.py  detectorconfig.csv
src/pylegendgeom/LegendBaseline/coaxialTemplate/: __init__.py  icpc.py
tests/: test_package.py
