[metadata]
name = pylegendgeom
version = attr: pylegendgeom._version.version
description = A description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yramachers/LegendGeom
author = Yorck Ramachers
author_email = user@domain.com
maintainer = Yorck Ramachers
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
install_requires =
    pyg4ometry
python_requires = >=3.9
include_package_data = True
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
all =
    pylegendgeom[docs,test]
docs =
    furo
    myst-parser
    sphinx
    sphinx-copybutton
test =
    pre-commit
    pytest>=6.0
    pytest-cov

[flake8]
extend-ignore = E203, E501, D10
per-file-ignores =
    scripts/*: T201
